// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Hydration DED [ded] transfer 1`] = `
[
  "assethub-hydration-ded",
  "0x3901041f0804010100c91f040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee0408000204320578000700e87648170002043205011f00823801000100000000",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Hydration DOT [dot] transfer 1`] = `
[
  "assethub-hydration-dot",
  "0x1101041f0d04010100c91f04040100000700e8764817010401000104040d0102040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Hydration DOTA [dota] transfer 1`] = `
[
  "assethub-hydration-dota",
  "0x3101041f0804010100c91f040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee040800020432054800821a06000002043205011f00823801000100000000",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Hydration KSM [ksm] transfer 1`] = `
[
  "assethub-hydration-ksm",
  "0x2501041f0d04010100c91f040402010903000b00a0724e18090104020109030104040d0102040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Hydration PINK [pink] transfer 1`] = `
[
  "assethub-hydration-pink",
  "0x3901041f0804010100c91f040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee040800020432055c000700e87648170002043205011f00823801000100000000",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Hydration USDC [usdc] transfer 1`] = `
[
  "assethub-hydration-usdc",
  "0x3101041f0d04010100c91f04040002043205e51400025a620201040002043205e5140104040d0102040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Hydration USDT [usdt] transfer 1`] = `
[
  "assethub-hydration-usdt",
  "0x3101041f0d04010100c91f04040002043205011f00025a620201040002043205011f0104040d0102040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Hydration WUD [wud] transfer 1`] = `
[
  "assethub-hydration-wud",
  "0x4501041f0804010100c91f040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee04080002043205011f00823801000002043205a6e90100000700e87648170000000000",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Moonbeam PINK [pink] transfer 1`] = `
[
  "assethub-moonbeam-pink",
  "0x0901041f0804010100511f0400010300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac040800020432055c000700e87648170002043205011f0042420f000100000000",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Moonbeam USDC [usdc] transfer 1`] = `
[
  "assethub-moonbeam-usdc",
  "0x0101041f0d04010100511f04040002043205e51400025a620201040002043205e5140104040d01020400010300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Moonbeam USDT [usdt] transfer 1`] = `
[
  "assethub-moonbeam-usdt",
  "0x0101041f0d04010100511f04040002043205011f00025a620201040002043205011f0104040d01020400010300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for AssetHub Polkadot -> Mythos MYTH [myth] transfer 1`] = `
[
  "assethub-mythos-myth",
  "0xe0041f0904010100a5340400010300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac0404010100a53400130000e8890423c78a0000000000",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Crust network -> Hydration CRU [cru] transfer 1`] = `
[
  "crust-hydration-cru",
  "0xf4047d000000a0724e18090000000000000000000003010200c91f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> AssetHub Polkadot DED [ded] transfer 1`] = `
[
  "hydration-assethub-ded",
  "0x45010489050408010300a10f04320578000700e8764817010300a10f043205011f0082fc0a000100000004010200a10f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> AssetHub Polkadot DOT [dot] transfer 1`] = `
[
  "hydration-assethub-dot",
  "0x1101046b0d04010100a10f04040100000700e8764817020401000204040d0102040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> AssetHub Polkadot DOTA [dota] transfer 1`] = `
[
  "hydration-assethub-dota",
  "0x3d010489050408010300a10f0432054800821a0600010300a10f043205011f0082fc0a000100000004010200a10f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> AssetHub Polkadot KSM [ksm] transfer 1`] = `
[
  "hydration-assethub-ksm",
  "0x2501046b0d04010100a10f040402010903000b00a0724e18090204020109030204040d0102040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> AssetHub Polkadot PINK [pink] transfer 1`] = `
[
  "hydration-assethub-pink",
  "0x45010489050408010300a10f0432055c000700e8764817010300a10f043205011f0082fc0a000100000004010200a10f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> AssetHub Polkadot USDC [usdc] transfer 1`] = `
[
  "hydration-assethub-usdc",
  "0xf004890104010300a10f043205e51400025a620204010200a10f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> AssetHub Polkadot USDT [usdt] transfer 1`] = `
[
  "hydration-assethub-usdt",
  "0xf004890104010300a10f043205011f00025a620204010200a10f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> AssetHub Polkadot WUD [wud] transfer 1`] = `
[
  "hydration-assethub-wud",
  "0x51010489050408010300a10f043205011f0082fc0a00010300a10f043205a6e90100000700e87648170000000004010200a10f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Bifrost DOT [dot] transfer 1`] = `
[
  "hydration-bifrost-dot",
  "0x4101046b0d04010100b91f04040100000700e87648170304010100a10f0401000304010100a10f04040d0102040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Crust network CRU [cru] transfer 1`] = `
[
  "hydration-crust-cru",
  "0x01010489001b00000000a0724e18090000000000000000000004010200611f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Laos LAOS [laos] transfer 1`] = `
[
  "hydration-laos-laos",
  "0xd00489002a0d00000000e8890423c78a000000000000000004010200a9340300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam DAI [dai_mwh] transfer 1`] = `
[
  "hydration-moonbeam-dai_mwh",
  "0x350104890408120000000000e8890423c78a0000000000000000100000000000087e93371c0100000000000000000100000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam GLMR [glmr] transfer 1`] = `
[
  "hydration-moonbeam-glmr",
  "0xd0048900100000000000e8890423c78a000000000000000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam HDX [hdx] transfer 1`] = `
[
  "hydration-moonbeam-hdx",
  "0xd00489000000000000a0724e18090000000000000000000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam SOL [sol] transfer 1`] = `
[
  "hydration-moonbeam-sol",
  "0x35010489040830450f0000e40b54020000000000000000000000100000000000087e93371c0100000000000000000100000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam USDC [usdc] transfer 1`] = `
[
  "hydration-moonbeam-usdc",
  "0xd0048900160000008096980000000000000000000000000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam USDC [usdc_mwh] transfer 1`] = `
[
  "hydration-moonbeam-usdc_mwh",
  "0x3501048904081500000080969800000000000000000000000000100000000000087e93371c0100000000000000000100000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam USDT [usdt] transfer 1`] = `
[
  "hydration-moonbeam-usdt",
  "0xd00489000a0000008096980000000000000000000000000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam USDT [usdt_mwh] transfer 1`] = `
[
  "hydration-moonbeam-usdt_mwh",
  "0x3501048904081700000080969800000000000000000000000000100000000000087e93371c0100000000000000000100000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam WBTC [wbtc_mwh] transfer 1`] = `
[
  "hydration-moonbeam-wbtc_mwh",
  "0x3501048904081300000000ca9a3b000000000000000000000000100000000000087e93371c0100000000000000000100000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam WETH [weth_mwh] transfer 1`] = `
[
  "hydration-moonbeam-weth_mwh",
  "0x350104890408140000000000e8890423c78a0000000000000000100000000000087e93371c0100000000000000000100000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Moonbeam sUSDS [susds_mwh] transfer 1`] = `
[
  "hydration-moonbeam-susds_mwh",
  "0x35010489040829450f000000e8890423c78a0000000000000000100000000000087e93371c0100000000000000000100000004010200511f0300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Mythos MYTH [myth] transfer 1`] = `
[
  "hydration-mythos-myth",
  "0xd00489001e0000000000e8890423c78a000000000000000004010200a5340300f24ff3a9cf04c71dbc94d0b566f7a27b94566cac00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Neuroweb NEURO [neuro] transfer 1`] = `
[
  "hydration-neuroweb-neuro",
  "0x01010489002400000000a0724e18090000000000000000000004010200ed1f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Pendulum PEN [pen] transfer 1`] = `
[
  "hydration-pendulum-pen",
  "0x010104890091420f0000a0724e18090000000000000000000004010200b920010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Hydration -> Unique network UNQ [unq] transfer 1`] = `
[
  "hydration-unique-unq",
  "0x0101048900190000000000e8890423c78a000000000000000004010200d51f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Laos -> Hydration LAOS [laos] transfer 1`] = `
[
  "laos-hydration-laos",
  "0x1d01041f0d04010100c91f0404000000130000e8890423c78a010400000104040d0102040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Mythos -> AssetHub Polkadot MYTH [myth] transfer 1`] = `
[
  "mythos-assethub-myth",
  "0x0501041f0904010100a10f040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee0404000000130000e8890423c78a0000000000",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Mythos -> Hydration MYTH [myth] transfer 1`] = `
[
  "mythos-hydration-myth",
  "0x1d01041f0d04010100c91f0404000000130000e8890423c78a010400000104040d0102040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Neuroweb -> Hydration NEURO [neuro] transfer 1`] = `
[
  "neuroweb-hydration-neuro",
  "0x0101041f0204010100c91f040001010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee04040001040a000b00a0724e180900000000",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Pendulum -> Hydration PEN [pen] transfer 1`] = `
[
  "pendulum-hydration-pen",
  "0xf40436000000a0724e18090000000000000000000003010200c91f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;

exports[`Wallet with XCM config should result in valid Polkadot transfer for Unique network -> Hydration UNQ [unq] transfer 1`] = `
[
  "unique-hydration-unq",
  "0x0101042600000000000000e8890423c78a000000000000000004010200c91f010088dc3417d5058ec4b4503e0c12ea1a0a89be200fe98922423d4334014fa6b0ee00",
]
`;
